policy-tests/4-allow-tenant-a-to-b-default.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-tennant-b
  namespace: tenant-a
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            dns:
              - matchPattern: "*"
          ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - cluster
