policy-tests/5-allow-twitter-default1.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-twitter
  namespace: tenant-a
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toFQDNs:
        - matchName: api.twitter.com
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            dns:
              - matchPattern: "*"
          ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - cluster
